# mini_budget_tracker

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  dashboard.py  exported_expenses.xlsx  pyproject.toml  requirements.txt  reset_and_run.sh  reset_db.py  transactions.xlsx
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
budget_saas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
database/: db.py  sample_data.py
mini_budget_tracker/: __init__.py  budget_tracker.py  core.py  dashboard.py.save  export.py
pages/: 1_📊_Summary.py  2_💸_Transactions.py  3_➕_Add_Transaction.py  4_⚙️_Settings.py
tests/: test_budget_tracker.py  test_reset_flag.py
utils/: charts.py  theme.py
