
[project]
name = "budget-saas"
version = "0.1.0"
description = "Budget Tracker SaaS with Streamlit"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "streamlit>=1.32.0",
    "plotly>=5.0.0",
    "pandas>=1.5.0",
    "rich>=13.0.0"
]
requires-python = ">=3.8"

[project.scripts]
budget-saas = "mini_budget_tracker.dashboard:run_app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
